# PhoneInventoryPro

./: CMakeLists.txt  README.md  functions.c  functions.h  main.c
